auto publishing updates to notebooks

--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "764224f8",
+   "id": "004a591e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f48d4f36",
+   "id": "b9e7b326",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb31e9f3",
+   "id": "370b10ed",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4fe42cd",
+   "id": "fb632a53",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a94f3270",
+   "id": "17c0e75c",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfbba836",
+   "id": "8ef1884e",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2e81181",
+   "id": "9129e5e1",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "965a8d67",
+   "id": "b2f60811",
    "metadata": {},
    "source": [
     "## The Model"
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e04c0973",
+   "id": "4a768f0c",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92dfd8ce",
+   "id": "e71a5c65",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -186,7 +186,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-7cc9b87d-9e33-49c1-8691-22686d07d30e'></a>\n",
+    "<a id='equation-8acafb95-05a8-4ef7-aafc-9cfd73eee1b1'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -199,7 +199,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-985b2860-b573-4397-bc54-fcd8a2da6c6a'></a>\n",
+    "<a id='equation-a259b765-ab7c-4df8-af7c-0dd6118688ec'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b472baa",
+   "id": "3d94ef47",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -253,7 +253,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-5f40b527-234d-4085-b0c4-749628da9850'></a>\n",
+    "<a id='equation-72fd147e-f36f-4197-a6e6-49b0d66aff05'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -263,7 +263,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-09672389-96d1-4f5d-ac3a-9de6a476dc00'></a>\n",
+    "<a id='equation-f0871bbf-2703-44bb-85aa-9961f57daebb'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -277,7 +277,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-ea0d3a44-f921-4f5f-bbd4-e8dcc1bcc8d3'></a>\n",
+    "<a id='equation-47d5014c-a385-406a-ac39-a2d49989d65e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -287,7 +287,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-ad0443c8-8e8f-4d86-8e5e-dafc88379440'></a>\n",
+    "<a id='equation-446e989d-5973-4e12-952f-71993faa7d9b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a35a69",
+   "id": "3970ddc4",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -312,7 +312,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-2d96add2-6486-4af5-972b-f07b1648efdd'></a>\n",
+    "<a id='equation-520040c3-c582-4215-a276-2a479860fa0f'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -324,7 +324,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-27b8e2ab-1d96-45ae-9fef-c0d5039d83f5'></a>\n",
+    "<a id='equation-5ef9f1cd-1879-4bbe-b02a-9f78e7d2886b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e77b3c",
+   "id": "f62bb051",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94fa029c",
+   "id": "a3d6fa30",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "855f9fc3",
+   "id": "4755d736",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83a24fd",
+   "id": "895ca98f",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e059922",
+   "id": "d6ce3a48",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e474ff9b",
+   "id": "09013fe0",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02a7c482",
+   "id": "19aca5d7",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879d5f29",
+   "id": "20ecee2f",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fe47946",
+   "id": "d7592fb4",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2828b4c",
+   "id": "1c12391f",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58fdd9e1",
+   "id": "8beb8d98",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7dec8fc",
+   "id": "342464e9",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43dc0661",
+   "id": "801d609e",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b545f4",
+   "id": "7005eff5",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a6272c8",
+   "id": "675b9aa0",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cfca335",
+   "id": "0f2b0315",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a6c9c3d",
+   "id": "2e6981d7",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbac924d",
+   "id": "ce45f43c",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5be849d6",
+   "id": "4531e793",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54839248",
+   "id": "b1f35e55",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9221d488",
+   "id": "9477cef9",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac9a7c8c",
+   "id": "96f5d469",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "938ad1a5",
+   "id": "a43a9f50",
    "metadata": {
     "hide-output": false
    },
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "475ef916",
+   "id": "0234bec0",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d6d27e8",
+   "id": "0d1056fc",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ce28ec",
+   "id": "6b56c852",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e5cee4e",
+   "id": "b097123a",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcf79d69",
+   "id": "9c30fa17",
    "metadata": {
     "hide-output": false
    },
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a310b8a9",
+   "id": "4c06a7c8",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "931919dc",
+   "id": "4f3069e2",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "565f079d",
+   "id": "c43a9612",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b3e4768",
+   "id": "6a7cc9f5",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0f2da5a",
+   "id": "b9463200",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9839b77",
+   "id": "cf82dc6d",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9510d11",
+   "id": "25114d5b",
    "metadata": {
     "hide-output": false
    },
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37cd0399",
+   "id": "49fbde98",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35443694",
+   "id": "11380797",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16cede07",
+   "id": "9939f02d",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "badd74ae",
+   "id": "d0022190",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51940769",
+   "id": "7f6a580a",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5206da8",
+   "id": "06246fed",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "284700ed",
+   "id": "3be217db",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8525eca",
+   "id": "181b3bc7",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f275073",
+   "id": "9a1f9363",
    "metadata": {
     "hide-output": false
    },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f0b28eb",
+   "id": "51f659ed",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b642ba",
+   "id": "fa4fc0e9",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4affbb15",
+   "id": "7b5eee8e",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7af61928",
+   "id": "87b54ef5",
    "metadata": {
     "hide-output": false
    },
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b87cb0",
+   "id": "f62e8134",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9018ed3f",
+   "id": "afa293cd",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb70cc6",
+   "id": "ac38baa3",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29905289",
+   "id": "e49aaa0f",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eb61923",
+   "id": "a4ea1d7a",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ea3a8f0",
+   "id": "d422086b",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e0412c",
+   "id": "723343b0",
    "metadata": {
     "hide-output": false
    },
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4f02c9a",
+   "id": "101fb4a9",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1266,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4cd4175",
+   "id": "d0c76adf",
    "metadata": {
     "hide-output": false
    },
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "574a7eac",
+   "id": "15500d5a",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a48bb30a",
+   "id": "0118785a",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69bb108",
+   "id": "eef474a9",
    "metadata": {
     "hide-output": false
    },
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb4c0616",
+   "id": "508781cb",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25b0a9f3",
+   "id": "78f08e2e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85cdc022",
+   "id": "f205facf",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cf147bf",
+   "id": "3d8b0048",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1581502a",
+   "id": "500359e2",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df1e5b6c",
+   "id": "573ed27e",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb94ad6",
+   "id": "409eac47",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0bffe54",
+   "id": "e0a04de4",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   }
  ],
  "metadata": {
-  "date": 1764321277.2847884,
+  "date": 1764377533.247296,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
