--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ab358d3",
+   "id": "17735e79",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d84db4",
+   "id": "f4a86015",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72d2033e",
+   "id": "6a82fb48",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c127851a",
+   "id": "439cc333",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd177dd",
+   "id": "8c3ee669",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c41ffc69",
+   "id": "db11dd67",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbfef2ea",
+   "id": "fe489ffd",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -89,19 +89,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e96d2e3f",
+   "id": "fc15672a",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
     "\n",
     "- [Maximum Likelihood Estimation](https://jax.quantecon.org/mle.html)\n",
     "- [Simple Neural Network Regression with Keras and JAX](https://jax.quantecon.org/keras.html)\n",
-    "- [Neural Network Regression with JAX](https://jax.quantecon.org/jax_nn.html)"
+    "- [Neural Network Regression with JAX](https://jax.quantecon.org/jax_nn.html)\n",
+    "- [Policy Gradient-Based Optimal Savings](https://jax.quantecon.org/ifp_dl.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b1e3fc0b",
+   "id": "d3232418",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -113,7 +114,7 @@
   }
  ],
  "metadata": {
-  "date": 1764321277.3289797,
+  "date": 1764377533.3242514,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
