--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bcc69539",
+   "id": "8af444cd",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb918e34",
+   "id": "2eeacbbc",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2275e914",
+   "id": "fe8016ce",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17b7fc86",
+   "id": "323d681f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e87c057d",
+   "id": "fa1f64d9",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "859870a2",
+   "id": "7e726908",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83121c25",
+   "id": "d87ddd38",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90c06dcf",
+   "id": "c4a2fee3",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fcde2d",
+   "id": "54f4375c",
    "metadata": {
     "hide-output": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f2505e7",
+   "id": "d9405b89",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6376d05a",
+   "id": "290f7d1f",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "286822fd",
+   "id": "20e60e74",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c39992",
+   "id": "c39cadd8",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d58e7f5",
+   "id": "48626226",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b4b6436",
+   "id": "2f8a90a4",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4ea48b7",
+   "id": "856bfffe",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8f5698b",
+   "id": "cc7ca23d",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e29f5e46",
+   "id": "50e58f89",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6d377d4",
+   "id": "67ec6d11",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc68897e",
+   "id": "b4619d47",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a6f2a3a",
+   "id": "8e6309eb",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cd960e0",
+   "id": "7acf356d",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0d55ca",
+   "id": "0df3561d",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2e4d019",
+   "id": "255c65d2",
    "metadata": {
     "hide-output": false
    },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb98851",
+   "id": "87a51d09",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55aeb5d0",
+   "id": "0ce369c8",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc96041b",
+   "id": "0c27829b",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ebec10",
+   "id": "250c7b14",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d99d4a8",
+   "id": "4cdb1433",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "199f1b28",
+   "id": "0bd68eee",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db1a2de4",
+   "id": "6bf3b278",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ec8df2c",
+   "id": "20d12dc9",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "403d30fc",
+   "id": "86864837",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "499772d0",
+   "id": "ba0212fd",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77e60772",
+   "id": "8ff3a138",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a830b9",
+   "id": "079f4025",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98f0c5fe",
+   "id": "01c68f13",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70226706",
+   "id": "7ae9fb3b",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a620e283",
+   "id": "c9573c26",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16eafa32",
+   "id": "d5bac974",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbf83512",
+   "id": "2ae4b5a3",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "990eff45",
+   "id": "2145ce6b",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f72f31",
+   "id": "cc41da30",
    "metadata": {
     "hide-output": false
    },
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12dc8510",
+   "id": "16d00622",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7137b7",
+   "id": "85639cf6",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d1b28c5",
+   "id": "5b4cda23",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -720,7 +720,7 @@
   }
  ],
  "metadata": {
-  "date": 1764321277.6546767,
+  "date": 1764377533.664916,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
