--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4c17c51",
+   "id": "40e0e539",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02d3e6a8",
+   "id": "651f0523",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ede74a5d",
+   "id": "2be7c317",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba3077be",
+   "id": "10e552a3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1154ebf",
+   "id": "c4ff6be5",
    "metadata": {
     "hide-output": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "726b514a",
+   "id": "3d813237",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f3bce71",
+   "id": "68f05976",
    "metadata": {
     "hide-output": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bb7dc5d",
+   "id": "cf2863f2",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f6dd6f",
+   "id": "9e5ecb27",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70ad3041",
+   "id": "b273619d",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50ad8f82",
+   "id": "249ef05a",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0339e87a",
+   "id": "9e3dc06d",
    "metadata": {
     "hide-output": false
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5573a149",
+   "id": "fab55e14",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d441ad4",
+   "id": "d7084774",
    "metadata": {
     "hide-output": false
    },
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a39ae8c9",
+   "id": "20537683",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b827144",
+   "id": "8679a245",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11594b3f",
+   "id": "bd117555",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0940018",
+   "id": "c4794593",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3d62679",
+   "id": "79d714a5",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f86640ee",
+   "id": "87b463fa",
    "metadata": {
     "hide-output": false
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "963b1fe5",
+   "id": "4318e01b",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44465cd3",
+   "id": "3b82964c",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec2825c5",
+   "id": "8d6dded5",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a2040dc",
+   "id": "c57ebc52",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05029f88",
+   "id": "b173c67f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70df849c",
+   "id": "d41f9b5a",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f576ffa3",
+   "id": "e695a4ce",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f907ef6",
+   "id": "507372b6",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879672c7",
+   "id": "6ad7645d",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b90329c",
+   "id": "67ef7d34",
    "metadata": {
     "hide-output": false
    },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18c5570c",
+   "id": "d3d59b6b",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6449f9d",
+   "id": "dd6a01fd",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0df4d37",
+   "id": "a62e19ad",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f796d8a2",
+   "id": "4b4b5918",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e65c0a0",
+   "id": "3fc38da7",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8828c982",
+   "id": "e5341a10",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6d51672",
+   "id": "c4bf1a83",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa5c19f",
+   "id": "5c1d7b52",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42b50a41",
+   "id": "81394512",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   }
  ],
  "metadata": {
-  "date": 1764321277.848012,
+  "date": 1764377533.8602006,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
