--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "76ff351e",
+   "id": "bd367369",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,25 +13,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1214f6bd",
+   "id": "14493a30",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
     "\n",
     "This table contains the latest execution statistics.\n",
     "\n",
-    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/autodiff.html)[](https://jax.quantecon.org/hopenhayn.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/inventory_ssd.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/jax_nn.html)[](https://jax.quantecon.org/job_search.html)[](https://jax.quantecon.org/keras.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/lucas_model.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings_1.html)[](https://jax.quantecon.org/opt_savings_2.html)[](https://jax.quantecon.org/overborrowing.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
+    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/autodiff.html)[](https://jax.quantecon.org/hopenhayn.html)[](https://jax.quantecon.org/ifp_dl.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/inventory_ssd.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/jax_nn.html)[](https://jax.quantecon.org/job_search.html)[](https://jax.quantecon.org/keras.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/lucas_model.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings_1.html)[](https://jax.quantecon.org/opt_savings_2.html)[](https://jax.quantecon.org/overborrowing.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
     "|aiyagari_jax|2025-11-28 05:58|cache|68.04|✅|\n",
     "|arellano|2025-11-28 05:58|cache|22.59|✅|\n",
     "|autodiff|2025-11-28 05:58|cache|13.12|✅|\n",
     "|hopenhayn|2025-11-28 05:59|cache|24.59|✅|\n",
+    "|ifp_dl|2025-11-29 00:50|cache|70.16|✅|\n",
     "|ifp_egm|2025-11-28 06:01|cache|139.78|✅|\n",
     "|intro|2025-11-28 06:01|cache|0.89|✅|\n",
     "|inventory_dynamics|2025-11-28 06:01|cache|8.47|✅|\n",
     "|inventory_ssd|2025-11-28 06:01|cache|9.63|✅|\n",
     "|jax_intro|2025-11-28 06:01|cache|19.15|✅|\n",
-    "|jax_nn|2025-11-28 09:13|cache|42.51|✅|\n",
+    "|jax_nn|2025-11-29 00:50|cache|45.37|✅|\n",
     "|job_search|2025-11-28 06:02|cache|10.05|✅|\n",
     "|keras|2025-11-28 06:03|cache|26.22|✅|\n",
     "|kesten_processes|2025-11-28 06:03|cache|10.89|✅|\n",
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e82de2f5",
+   "id": "9c40a426",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55da528a",
+   "id": "f3d25ea2",
    "metadata": {},
    "source": [
     "and the following package versions"
@@ -79,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f01fe63",
+   "id": "a508c740",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97eb4151",
+   "id": "cdb3cd30",
    "metadata": {},
    "source": [
     "You can check the backend used by JAX using:"
@@ -99,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d032916b",
+   "id": "8d6ea6cb",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32c8b208",
+   "id": "c8ae4f3c",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a352204",
+   "id": "61b52ec7",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +133,7 @@
   }
  ],
  "metadata": {
-  "date": 1764321277.8653731,
+  "date": 1764377533.8780851,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
