--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "67940764",
+   "id": "04f0710b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d404154b",
+   "id": "e470f468",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29dbf20f",
+   "id": "38aa045a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476fec13",
+   "id": "370f48be",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f853ae",
+   "id": "13c66760",
    "metadata": {},
    "source": [
     "### References\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88f2d369",
+   "id": "7344d892",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5e9ac1e",
+   "id": "391c2240",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05aa0742",
+   "id": "7c68acf5",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f92252",
+   "id": "6ae90088",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef7cd2c7",
+   "id": "cc47eb51",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbc1f8b7",
+   "id": "c6ac37a2",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23fd743b",
+   "id": "cfad18c0",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1e15832",
+   "id": "c8ec32da",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14553987",
+   "id": "0295e6dd",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e91ecf79",
+   "id": "2d576cec",
    "metadata": {
     "hide-output": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c4c507",
+   "id": "af509796",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "221ac1a3",
+   "id": "ac76afed",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2d8df9a",
+   "id": "cb8bd53e",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11ed6add",
+   "id": "2ffcc185",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d887cf00",
+   "id": "56077e6e",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7afb7a77",
+   "id": "1f907178",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fae383d0",
+   "id": "551cd227",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "229404bd",
+   "id": "00364b1b",
    "metadata": {
     "hide-output": false
    },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb20e532",
+   "id": "108bcdf1",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd5d8e4b",
+   "id": "39e7a523",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf3f0a6",
+   "id": "809be024",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77eae10f",
+   "id": "2fd96907",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8182f352",
+   "id": "f53a6b0a",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5fbe1c3",
+   "id": "d522fe00",
    "metadata": {
     "hide-output": false
    },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0281904c",
+   "id": "1aa62ce8",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793a7958",
+   "id": "c3685ad8",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e53742d",
+   "id": "d9a8d707",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc9a0b1",
+   "id": "a0716862",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70818d38",
+   "id": "5be9dd57",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea61ecb7",
+   "id": "efb61a0f",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb14d813",
+   "id": "8598b9c5",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5e45a4b",
+   "id": "19a8237e",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78483cd6",
+   "id": "f84434b8",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a18d3f54",
+   "id": "f06c224f",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d66df659",
+   "id": "88b121b0",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32201ea4",
+   "id": "f7fca885",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a1df64",
+   "id": "655a691a",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baa83dfd",
+   "id": "9ad7534e",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cc01d0c",
+   "id": "0c2c107d",
    "metadata": {
     "hide-output": false
    },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba2b365b",
+   "id": "fae6013e",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3180be0e",
+   "id": "257729aa",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c65d59d3",
+   "id": "e88e7f87",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0f6a5be",
+   "id": "baac386c",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72856f60",
+   "id": "eb0b0308",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -827,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e15e6c06",
+   "id": "0f62b3df",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b671925",
+   "id": "16f4d71d",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03140d30",
+   "id": "515729b9",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cfd3f68",
+   "id": "c7158636",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75911d06",
+   "id": "d29a4c8f",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06de07e8",
+   "id": "dcf9e9a2",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaa2a950",
+   "id": "8eeba1b2",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ade43f61",
+   "id": "67b06a09",
    "metadata": {
     "hide-output": false
    },
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1be1ba7",
+   "id": "4814eaca",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -961,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c499037",
+   "id": "05567976",
    "metadata": {
     "hide-output": false
    },
@@ -977,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0706d9",
+   "id": "c42eb8d1",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "773564b2",
+   "id": "8ef8e59e",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ee5a9e",
+   "id": "728a0208",
    "metadata": {
     "hide-output": false
    },
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52303043",
+   "id": "10e814aa",
    "metadata": {
     "hide-output": false
    },
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b62b2f2",
+   "id": "71a9475f",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d81fe75d",
+   "id": "ed9a38b7",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99025b2c",
+   "id": "f4cc3fad",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2a1623b",
+   "id": "e03fd10d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96872b8a",
+   "id": "de47a065",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c74857fb",
+   "id": "be9a1ab1",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77520f95",
+   "id": "fca0f65a",
    "metadata": {
     "hide-output": false
    },
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29f085e0",
+   "id": "0bd3e2ac",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff003739",
+   "id": "81bf0c5b",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87772900",
+   "id": "ca18a315",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58917ad",
+   "id": "96f778ff",
    "metadata": {
     "hide-output": false
    },
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de389c0c",
+   "id": "b0493192",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18f1ca29",
+   "id": "a8fef532",
    "metadata": {
     "hide-output": false
    },
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "757ef14f",
+   "id": "fb1e9ea1",
    "metadata": {
     "hide-output": false
    },
@@ -1226,7 +1226,7 @@
   }
  ],
  "metadata": {
-  "date": 1764321277.0770612,
+  "date": 1764377533.031761,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
