--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb66cfe4",
+   "id": "a3d8414d",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7205407",
+   "id": "2a08566f",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e4f33a",
+   "id": "7053688b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95aedc60",
+   "id": "d5b98f46",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1ba804b",
+   "id": "eca8dcb5",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4807e5",
+   "id": "7522ee1b",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b94b582",
+   "id": "45fda8c1",
    "metadata": {
     "hide-output": false
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b3d38e",
+   "id": "023044c7",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50fb8c99",
+   "id": "82e8948a",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9351c5e",
+   "id": "0fc70ced",
    "metadata": {
     "hide-output": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a429a356",
+   "id": "7b24d976",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f26ad992",
+   "id": "b815e882",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "263fdaeb",
+   "id": "16ed0468",
    "metadata": {
     "hide-output": false
    },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db849dd3",
+   "id": "eb81474f",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1b1a92a",
+   "id": "7d0f3479",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be5a0a5",
+   "id": "4f5630a3",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90a2da52",
+   "id": "8fdb0ea6",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0025cd8",
+   "id": "bcdce7a3",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52dbd6db",
+   "id": "0d694e4b",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec6cfa5d",
+   "id": "b18dc784",
    "metadata": {
     "hide-output": false
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4aef790",
+   "id": "4b79b6f7",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7d535b9",
+   "id": "b779aa10",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f3b6e50",
+   "id": "5c3154d6",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f366e6c2",
+   "id": "c3f8309f",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "064e694f",
+   "id": "49d3f861",
    "metadata": {
     "hide-output": false
    },
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3e3457a",
+   "id": "2db3280d",
    "metadata": {
     "hide-output": false
    },
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "242d20ae",
+   "id": "d186bd11",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3985f5",
+   "id": "b7ffd2b9",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6da03fd",
+   "id": "c88b6a3f",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1827388",
+   "id": "4f4e6c8a",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b496cec1",
+   "id": "7546a762",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d64a904",
+   "id": "2bc05de2",
    "metadata": {
     "hide-output": false
    },
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49527b4d",
+   "id": "e8173c6f",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20983bf4",
+   "id": "b4ba9ce4",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c907cc60",
+   "id": "613fdd72",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fa783a7",
+   "id": "acc14f0d",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e27ab69",
+   "id": "44cf7c7d",
    "metadata": {
     "hide-output": false
    },
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e639457c",
+   "id": "e89978d3",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea6f3998",
+   "id": "5c89b0b9",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f789df3",
+   "id": "68c3dcf7",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d448a753",
+   "id": "d9cec78e",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53b3dee4",
+   "id": "a804588a",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73659ea7",
+   "id": "b329ac14",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa8b03c8",
+   "id": "1d5de68c",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38adc930",
+   "id": "20ba39b3",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c693ba0",
+   "id": "0b09ede5",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9122b727",
+   "id": "c165c879",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c53368",
+   "id": "be87884d",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b84ad27",
+   "id": "cc2cace0",
    "metadata": {
     "hide-output": false
    },
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e63176d",
+   "id": "0ec6a208",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e11147e",
+   "id": "a2028135",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e296e331",
+   "id": "916bf2c9",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "031f123c",
+   "id": "3f512fcd",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31573a91",
+   "id": "e9d5037c",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcbc2a84",
+   "id": "ae7e9f5b",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c77fb85",
+   "id": "29a6cfcc",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e0113e",
+   "id": "b442227d",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "334cefc3",
+   "id": "9b401f11",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0939325",
+   "id": "56dd6fa1",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e3bd8c",
+   "id": "f482e964",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60689425",
+   "id": "f6c2a395",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fa3b963",
+   "id": "9e236124",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b3d330e",
+   "id": "23dda889",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cba68483",
+   "id": "a7f057f0",
    "metadata": {
     "hide-output": false
    },
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fade7b08",
+   "id": "11e4b8b7",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   }
  ],
  "metadata": {
-  "date": 1764321277.244716,
+  "date": 1764377533.2059455,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
