--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c31ffee0",
+   "id": "d0a6139f",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f287d098",
+   "id": "8c4076ea",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec126b8a",
+   "id": "7c646457",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bcbd5d8",
+   "id": "f97f58cc",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "870afa0f",
+   "id": "32243d86",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b82231e8",
+   "id": "cab4cb2f",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61a624a4",
+   "id": "030b5ff9",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bc6bf98",
+   "id": "dd91507b",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731eda55",
+   "id": "f4f234bb",
    "metadata": {
     "hide-output": false
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c70292d",
+   "id": "49e7d8df",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd08a7a7",
+   "id": "a3ac94e2",
    "metadata": {
     "hide-output": false
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4321c088",
+   "id": "42a28680",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a43af44d",
+   "id": "eb20ae4e",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa3f888",
+   "id": "e7caacba",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a3b470b",
+   "id": "0766a749",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b077420",
+   "id": "271856f8",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2edbb59",
+   "id": "aef592e0",
    "metadata": {
     "hide-output": false
    },
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "430e3478",
+   "id": "543c2ac2",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5766b375",
+   "id": "f3d6186c",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7167b81b",
+   "id": "f805fd96",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c23befb",
+   "id": "76a09640",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad4643b",
+   "id": "ef501b7f",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "011f278f",
+   "id": "1f99e6ba",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16bc227",
+   "id": "436d0659",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3867708e",
+   "id": "aa1024d7",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24582551",
+   "id": "b42478e8",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3180c4ac",
+   "id": "d812455f",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95766857",
+   "id": "3166efd7",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca9540e",
+   "id": "15d1fbaf",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31830f74",
+   "id": "327af5d4",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0450d1ae",
+   "id": "e5dea7fd",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5543e6",
+   "id": "8cafabc3",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23d16b09",
+   "id": "b36a9a90",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f99b149c",
+   "id": "cb7d87a1",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44ecfd9",
+   "id": "845c8c75",
    "metadata": {
     "hide-output": false
    },
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29dc7bfb",
+   "id": "d5f2936e",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb1f4fd5",
+   "id": "6447452a",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "475236b9",
+   "id": "b775f6c9",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93acd1ca",
+   "id": "d4611aa0",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe4edc5",
+   "id": "0e2d9bd3",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8162d4b3",
+   "id": "d3e80691",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5657439d",
+   "id": "d618da8a",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d1e3dc1",
+   "id": "bcc52b80",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f490d471",
+   "id": "cacb69e8",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "892fc5f2",
+   "id": "b9e73b28",
    "metadata": {
     "hide-output": false
    },
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e09a4820",
+   "id": "c70baaf8",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb93702e",
+   "id": "f362b94d",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "253f36bf",
+   "id": "55a509dc",
    "metadata": {
     "hide-output": false
    },
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "307d8869",
+   "id": "20a85b78",
    "metadata": {
     "hide-output": false
    },
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1efbe3bc",
+   "id": "ec726f0a",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8af7988c",
+   "id": "6a7bec0c",
    "metadata": {
     "hide-output": false
    },
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac939f37",
+   "id": "fc4b08ec",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9489aee",
+   "id": "818dab8a",
    "metadata": {
     "hide-output": false
    },
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "662e62c7",
+   "id": "1a3b70bd",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c502b667",
+   "id": "eacbca64",
    "metadata": {
     "hide-output": false
    },
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0755f1ef",
+   "id": "82642460",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e484776",
+   "id": "a80d81fe",
    "metadata": {
     "hide-output": false
    },
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b0e13fa",
+   "id": "a7bde919",
    "metadata": {
     "hide-output": false
    },
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f89682e",
+   "id": "79248c90",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51853291",
+   "id": "c4542065",
    "metadata": {
     "hide-output": false
    },
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5e9851d",
+   "id": "061b57fd",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1382,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2369c8a",
+   "id": "cecc53b4",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e9c7151",
+   "id": "cbd00e26",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30d5f080",
+   "id": "71461d9c",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d10d7da",
+   "id": "8bd3f927",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d643aa05",
+   "id": "9b26ee7e",
    "metadata": {
     "hide-output": false
    },
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b8bc36e",
+   "id": "0baa2274",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a4fd7b2",
+   "id": "a41974d4",
    "metadata": {
     "hide-output": false
    },
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e704efe",
+   "id": "73b104a0",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56417102",
+   "id": "b40288d3",
    "metadata": {
     "hide-output": false
    },
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1884b9f",
+   "id": "0aa8cae6",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5891a97",
+   "id": "2007fb05",
    "metadata": {
     "hide-output": false
    },
@@ -1536,7 +1536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f9e8d57",
+   "id": "e1dd369b",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1545,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a10b20b1",
+   "id": "3b3222c0",
    "metadata": {
     "hide-output": false
    },
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6a3845a",
+   "id": "ca0c204a",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5332a45",
+   "id": "5f856a41",
    "metadata": {
     "hide-output": false
    },
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f5476e",
+   "id": "8f4a17d1",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5379934",
+   "id": "dbf0cd48",
    "metadata": {
     "hide-output": false
    },
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "716ffca9",
+   "id": "aae8a9c5",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1611,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ceba084",
+   "id": "bd5553b3",
    "metadata": {
     "hide-output": false
    },
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e687ff",
+   "id": "97de518d",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d3b981b",
+   "id": "c601d855",
    "metadata": {
     "hide-output": false
    },
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5115adae",
+   "id": "32b1c222",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1661,7 +1661,7 @@
   }
  ],
  "metadata": {
-  "date": 1764321277.6299636,
+  "date": 1764377533.639348,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
